5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1723_2496.log
== TEST (2019-05-07 21:18:55) 
-- CODE:
a = int(input('digite um numero:'))
while a != -1:
	b = a
	a = int(input('digite um numero:'))
	if a != -1:
		a += b
		

		
	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:19:25) 
-- CODE:
a = int(input('digite um numero:'))
while a != -1:
	b = a
	a = int(input('digite um numero:'))
	if a != -1:
		a += b
print(a)

		
	
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:20:31) 
-- CODE:
a = int(input('digite um numero:'))
while a != -1:
	a = int(input('digite um numero:'))
	if a != -1:
		b += a
print(b)

		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    b += a
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:20:49) 
-- CODE:
a = int(input('digite um numero:'))
b = 0
while a != -1:
	a = int(input('digite um numero:'))
	if a != -1:
		b += a
print(b)

		
	
-- OUTPUT:
1399
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 21:21:01) 
-- CODE:
a = int(input('digite um numero:'))
b = 0
while a != -1:
	a = int(input('digite um numero:'))
	if a != -1:
		b += a
print(b)

		
	
-- EXECUTION TIME:
0.176474
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
1399
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
21700
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:23:20) 
-- CODE:
a = int(input('digite um numero:'))
b = 0
while a != -1:
	b+=a
	a = int(input('digite um numero:'))
	
print(b)

		
	
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 21:23:29) 
-- CODE:
a = int(input('digite um numero:'))
b = 0
while a != -1:
	b+=a
	a = int(input('digite um numero:'))
	
print(b)

		
	
-- EXECUTION TIME:
0.191573
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
